--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -27,43 +27,60 @@
             <h3 class="text-uppercase brand-brown-dark font-semibold">Filters by</h3>
 
             <div class="protein">
-              <input type="checkbox">
-              <span class="white">Protein Snacks</span>
+            <div class="checkbox">
+                <input type="checkbox" id="protein">
+              <label class="white" for="protein">
+                <span></span>Protein Snacks</label>
+            </div>
             </div>
 
             <div class="evening">
-              <input type="checkbox">
-              <span class="white">Evening Snacks</span>
+              <div class="checkbox">
+                <input type="checkbox" id="eve">
+                <label class="white" id="eve"> <span></span>Evening Snacks</label>
+              </div>
             </div>
 
             <div class="cookies">
-              <input type="checkbox">
-              <span class="white">Cookies</span>
+              <div class="checkbox">
+                <input type="checkbox" id="cookies">
+                <label class="white"><span></span> Cookies</label>
+              </div>
             </div>
 
             <div class="nuts">
-              <input type="checkbox">
-              <span class="white">Nuts</span>
+              <div class="checkbox">
+                <input type="checkbox" id="nuts">
+                <label class="white"><span></span> Nuts</label>
+              </div>
             </div>
 
             <div class="fiber">
-              <input type="checkbox">
-              <span class="white">Fiber Rich</span>
+              <div class="checkbox">
+                <input type="checkbox" id="fiber">
+                <label class="white"><span></span> Fiber Rich</label>
+              </div>
             </div>
 
             <div class="teas">
-              <input type="checkbox">
-              <span class="white">Flavoured Teas</span>
+            <div class="checkbox">
+                <input type="checkbox" id="teas">
+              <label class="white" for="teas"><span></span>  Flavoured Teas</label>
+            </div>
             </div>
 
             <div class="burner">
-              <input type="checkbox">
-              <span class="white">Fat Burner</span>
+            <div class="checkbox">
+                <input type="checkbox" id="burner">
+              <label class="white" for="burner"><span></span> Fat Burner</label>
+            </div>
             </div>
 
             <div class="chocolate">
-              <input type="checkbox">
-              <span class="white">Chocolates</span>
+              <div class="checkbox">
+                <input type="checkbox" id="choc">
+                <label class="white"for="choc"><span></span> Chocolates</label>
+              </div>
             </div>
 
           </div>
