--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -28,9 +28,13 @@
                         </div>
                     </div>
                     <div class="accept">
-                        <label for="" class="text-light text-uppercase">
-                            <input type="checkbox" class="text-uppercase"> I Accept The Terms And Conditions And Privacy Policy Of The Website
-                        </label>
+                      <div class="checkbox">
+                        <input type="checkbox" class="text-uppercase" id="accept">
+                          <label for="accept" class="text-light text-uppercase">
+                            <span></span>
+                               I Accept The Terms And Conditions And Privacy Policy Of The Website
+                          </label>
+                      </div>
                     </div>
                     <div class="text-center submit">
                         <button class="btn btn-primary text-uppercase" type="submit">Signup</button>
