--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -10,7 +10,8 @@
       <uib-tabset>
         <uib-tab>
           <uib-tab-heading>
-            Email login <i class="fa fa-right"></i>
+            Email login
+            <span class="greater"> &gt; </span>
           </uib-tab-heading>
           <div class="order-summary">
             <table class="table">
@@ -33,14 +34,20 @@
                     <input type="password" class="form-control" placeholder="Password">
                   </div>
                   <div class="form-group">
-                    <label for="" class="text-light">
-                    <input type="radio" name="continue"> Continue without passsword.
-                    </label>
+                      <div class="radio">
+                        <input type="radio" name="continue" id="pswd">
+                                            <label for="pswd" class="text-light">
+                        <span></span> Continue without passsword.
+                                            </label>
+                      </div>
                   </div>
                   <div class="form-group">
-                    <label for="" class="text-light">
-                    <input type="radio" name="continue"> I have a selfcare account and password.
+                  <div class="radio">
+                      <input type="radio" name="continue" id="sc">
+                    <label for="sc" class="text-light">
+                      <span></span> I have a selfcare account and password.
                     </label>
+                  </div>
                   </div>
                   <a href="" class="btn btn-primary text-uppercase">continue</a>
                 </form>
@@ -50,7 +57,8 @@
         </uib-tab>
         <uib-tab>
           <uib-tab-heading>
-            shipping address <i class="fa fa-right"></i>
+            shipping address
+            <span class="greater"> &gt; </span>
           </uib-tab-heading>
           <div class="order-summary">
             <table class="table">
@@ -65,23 +73,36 @@
           <div class="checkout-main">
             <div class="row">
               <div class="col-md-4">
-            <h5 class="brand-primary">Enter a new shopping address</h5>
-            <form action="">
-              <div class="form-group"><input type="text" class="form-control" placeholder="Name *"></div>
-              <div class="form-group"><input type="text" class="form-control" placeholder="Address *"></div>
-              <div class="form-group"><input type="text" class="form-control" placeholder="Pin *"></div>
-              <div class="form-group"><input type="text" class="form-control" placeholder="City *"></div>
-              <div class="form-group"><input type="text" class="form-control" placeholder="State *"></div>
-              <div class="form-group"><input type="number" class="form-control" placeholder="Phone *"></div>
-              <a href="" class="text-uppercase btn btn-primary">Save &amp; Continue</a>
-            </form>
-          </div>
-          </div>
+                <h5 class="brand-primary">Enter a new shopping address</h5>
+                <form action="">
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Name *">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Address *">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Pin *">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="City *">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="State *">
+                  </div>
+                  <div class="form-group">
+                    <input type="number" class="form-control" placeholder="Phone *">
+                  </div>
+                  <a href="" class="text-uppercase btn btn-primary">Save &amp; Continue</a>
+                </form>
+              </div>
+            </div>
           </div>
         </uib-tab>
         <uib-tab>
           <uib-tab-heading>
-            order-summary <i class="fa fa-right"></i>
+            order-summary
+            <span class="greater"> &gt; </span>
           </uib-tab-heading>
           <div class="order-summary">
             <table class="table">
@@ -110,7 +131,7 @@
                       <td>
                         <figure>
                           <div class="cart-imgholder m-center round">
-                          <img ng-src="{{product.img}}" class="img-responsive">
+                            <img ng-src="{{product.img}}" class="img-responsive">
                           </div>
                           <figcaption class="text-center text-uppercase">{{product.name}}</figcaption>
                         </figure>
@@ -122,13 +143,13 @@
                       </td>
                       <td>
                         <div class="cart-amount">
-                        <p>RS. {{product.amount}}</p>
-                      </div>
+                          <p>RS. {{product.amount}}</p>
+                        </div>
                       </td>
                       <td>
                         <div class="cart-total-amount">
-                        <p>RS. {{product.totalamount}}</p>
-                      </div>
+                          <p>RS. {{product.totalamount}}</p>
+                        </div>
                         <!-- <div class="remove text-right">
                           <button class="btn btn-primary text-uppercase no-radius">Remove</button>
                         </div> -->
@@ -136,23 +157,25 @@
                     </tr>
                   </tbody>
                 </table>
-    <div class="coupon">
-      <div class="">
-        <span>Shipping Charges</span>
-      </div>
-      <div class="text-right">
-      <span>Rs 200.00</span>
-      </div>
-      <form action="" class="form-inline">
-        <label for="" class="text-light"> coupon code
-          <input type="text">
-        </label>
-        <button class="btn btn-primary">APPLY</button>
-      </form>
-    </div>
+                <div class="coupon letter-space">
+                  <div class="clearfix coupon-ship">
+                    <div class="text-uppercase pull-left">
+                      <span>Shipping Charges</span>
+                    </div>
+                    <div class="text-right text-uppercase pull-right price-ship">
+                      <span>Rs 200.00</span>
+                    </div>
+                  </div>
+                  <form action="" class="form-inline">
+                    <label for="" class="text-light"> COUPON CODE
+                      <input type="text" class="form-control">
+                    </label>
+                    <button class="btn btn-primary apply">APPLY</button>
+                  </form>
+                </div>
                 <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark font-semibold">
                   <span class="text-uppercase pull-left">Grand Total</span>
-                  <span class="pull-right text-uppercase">Rs. 375.00</span>
+                  <span class="pull-right text-uppercase">Rs. 575.00</span>
                 </div>
 
                 <div class="shipping">
@@ -174,7 +197,7 @@
         </uib-tab>
         <uib-tab>
           <uib-tab-heading>
-            payment options <i class="fa fa-right"></i>
+            payment options
           </uib-tab-heading>
         </uib-tab>
       </uib-tabset>
