--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -81,8 +81,8 @@
                             <span class="text-uppercase brand-brown-dark-bg">Lost</span>
                             <span>{{view.weight}}kgs</span>
                           </div>
-                          <span class="text-left brand-brown-dark">{{view.name}}</span>
-                          <span class="text-left">{{view.location}}</span>
+                          <span class="name text-left brand-brown-dark font-semibold">{{view.name}}</span>
+                          <span class="location text-left">{{view.location}}</span>
                         </div>
                         <div class="view-detail">
                           <span class="text-left">{{view.title}}</span>
@@ -103,7 +103,7 @@
                             <span class="text-uppercase brand-brown-dark-bg">Lost</span>
                             <span>{{view.weight}}kgs</span>
                           </div>
-                          <span class="name text-left brand-brown-dark">{{view.name}}</span>
+                          <span class="name text-left brand-brown-dark font-semibold">{{view.name}}</span>
                           <span class="location text-left">{{view.location}}</span>
                         </div>
                         <div class="view-detail">
