--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -37,28 +37,28 @@
             <div class="evening">
               <div class="checkbox">
                 <input type="checkbox" id="eve">
-                <label class="white" id="eve"> <span></span>Evening Snacks</label>
+                <label class="white" for="eve"> <span></span>Evening Snacks</label>
               </div>
             </div>
 
             <div class="cookies">
               <div class="checkbox">
                 <input type="checkbox" id="cookies">
-                <label class="white"><span></span> Cookies</label>
+                <label class="white" for="cookies"><span></span> Cookies</label>
               </div>
             </div>
 
             <div class="nuts">
               <div class="checkbox">
                 <input type="checkbox" id="nuts">
-                <label class="white"><span></span> Nuts</label>
+                <label class="white" for="nuts"><span></span> Nuts</label>
               </div>
             </div>
 
             <div class="fiber">
               <div class="checkbox">
                 <input type="checkbox" id="fiber">
-                <label class="white"><span></span> Fiber Rich</label>
+                <label class="white" for="fiber"><span></span> Fiber Rich</label>
               </div>
             </div>
 
