--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -82,10 +82,10 @@
                             <span>{{view.weight}}kgs</span>
                           </div>
                           <span class="name text-left brand-brown-dark font-semibold">{{view.name}}</span>
-                          <span class="location text-left">{{view.location}}</span>
+                          <span class="location text-left white">{{view.location}}</span>
                         </div>
                         <div class="view-detail">
-                          <span class="text-left">{{view.title}}</span>
+                          <span class="title text-left brand-brown-dark">{{view.title}}</span>
                         </div>
                       </div>
                     </div>
@@ -99,15 +99,15 @@
                     <div class="row">
                       <div class="col-md-6">
                         <div class="inner-view">
-                          <div class="get-round pull-right">
+                          <div class="get-round pull-right view-right">
                             <span class="text-uppercase brand-brown-dark-bg">Lost</span>
                             <span>{{view.weight}}kgs</span>
                           </div>
                           <span class="name text-left brand-brown-dark font-semibold">{{view.name}}</span>
-                          <span class="location text-left">{{view.location}}</span>
+                          <span class="location text-left white">{{view.location}}</span>
                         </div>
                         <div class="view-detail">
-                          <span class="text-left">{{view.title}}</span>
+                          <span class="title text-left brand-brown-dark">{{view.title}}</span>
                         </div>
                       </div>
 
