--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -302,19 +302,28 @@
             <div class="healthmanagement-slider">
               <div class="row">
                 <div class="col-md-4">
-                  <div class="slide-imghold">
-                    <img src="{{slide.img}}" alt="" class="img-responsive">
+                  <figure>
+                  <div class="slide-imghold category-imghold round">
+                    <img ng-src="{{slide.img}}" alt="" class="img-responsive">
                   </div>
+                  <figcaption class="text-uppercase brand-brown-dark text-bold">{{slide.caption}}</figcaption>
+                  </figure>
                 </div>
                 <div class="col-md-4">
-                  <div class="slide-imghold">
-                    <img src="{{slide.img}}" alt="" class="img-responsive">
+                  <figure>
+                  <div class="slide-imghold category-imghold round">
+                    <img ng-src="{{slide.img}}" alt="" class="img-responsive">
                   </div>
+                  <figcaption class="text-uppercase brand-brown-dark text-bold">{{slide.caption}}</figcaption>
+                  </figure>
                 </div>
                 <div class="col-md-4">
-                  <div class="slide-imghold">
-                    <img src="{{slide.img}}" alt="" class="img-responsive">
+                  <figure>
+                  <div class="slide-imghold category-imghold round">
+                    <img ng-src="{{slide.img}}" alt="" class="img-responsive">
                   </div>
+                  <figcaption class="text-uppercase brand-brown-dark text-bold">{{slide.caption}}</figcaption>
+                  </figure>
                 </div>
               </div>
             </div>
