--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -1,6 +1,6 @@
 <div class="login-tab">
-    <tabset>
-        <tab heading="Sign up">
+    <uib-tabset>
+        <uib-tab heading="Sign up">
             <div class="login-form">
                 <form action="">
                     <div class="row">
@@ -53,8 +53,8 @@
                     </div>
                 </div>
             </div>
-        </tab>
-        <tab heading="Sign in">
+        </uib-tab>
+        <uib-tab heading="Sign in">
             <div class="login-form">
                 <form action="">
                     <div class="row">
@@ -84,6 +84,6 @@
                     </div>
                 </div>
             </div>
-        </tab>
-    </tabset>
+        </uib-tab>
+    </uib-tabset>
 </div>
