--- a/sass/main.scss
+++ b/sass/main.scss
@@ -332,6 +332,7 @@ button {
 }
 .round {
   border-radius: 100%;
+  overflow: hidden;
 }
 .letter-space {
   letter-spacing: 2px;
@@ -1337,6 +1338,10 @@ footer {
   input[type="checkbox"] +label span {   border: 1px solid $brand-brown-dark; }
 
   input[type="checkbox"]:checked + label span {   background-color: $brand-brown-dark;  }
+}
+
+.slide-imghold {
+  @include square(250px);
 }
 /// end of filters///
 //////end footer/////
