--- a/views/header.html
+++ b/views/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="header-main">
+  <div class="header-main" ng-controller="headerctrl">
     <div class="container">
 
       <div class="row">
